# sonic-swss-common

./: .artifactignore  .bazelrc  .gitignore  BUILD  BUILD.bazel  Cargo.toml  LICENSE  MAINTAINERS  MODULE.bazel  Makefile.am  README.md  ThirdPartyLicenses.txt  WORKSPACE  always_link_transition.bzl  aminclude_static.am  autogen.sh  azure-pipelines.yml  configure.ac  dummy-pr-trigger  dummy_test_file.txt  gen_cfg_schema.py  get-gtest.sh  package.cfg  ut_dump_file.txt
.azure-pipelines/: build-docker-sonic-vs-template.yml  build-sairedis-template.yml  build-swss-template.yml  build-template.yml  build-ubuntu-template.yml  build_and_install_module.sh  template-get-source-branch.yml  test-docker-sonic-vs-template.yml
.github/: copilot-instructions.md  dummy-pr-trigger  pull_request_template.md
bazel/: BUILD.bazel  always_link_transition.bzl  flags.bzl
build-env/: Dockerfile  README.md  build.sh  compose.yaml  configure-redis-for-tests.sh  upstream-artifacts.yaml
ci/: .gitignore  README.md
common/: BUILD.bazel  COMPILE_README  Makefile.am  advanced_restart.cpp  advanced_restart.h  armhelper.h  asyncdbupdater.cpp  asyncdbupdater.h  binaryserializer.cpp  binaryserializer.h  boolean.cpp  boolean.h  cancellationtoken.cpp  cancellationtoken.h  cfg_schema.h  cfg_schema.h.pregenerated  cfgorch.cpp  cfgorch.h  component_state_helper.cpp  component_state_helper.h  component_state_helper.lua  component_state_helper_interface.h  component_stats_otlp.cpp  component_stats_otlp.h  componentstats.cpp  componentstats.h  concurentmap.h  concurrentmap.h  configdb.cpp  configdb.h  consumer_state_table_pops.lua  consumer_table_pops.lua  consumernotifier.cpp  consumernotifier.h  consumernotifierinterface.h  consumerstatetable.cpp  consumerstatetable.h  consumertable.cpp  consumertable.h  consumertablebase.cpp  (+190 more)
common/c-api/: README.md  configdbconnector.cpp  configdbconnector.h  consumerstatetable.cpp  consumerstatetable.h  dbconnector.cpp  dbconnector.h  events.cpp  events.h  logger.cpp  logger.h  producerstatetable.cpp  producerstatetable.h  result.h  sonicv2connector.cpp  sonicv2connector.h  subscriberstatetable.cpp  subscriberstatetable.h  table.cpp  table.h  util.cpp  util.h  zmqclient.cpp  zmqclient.h  zmqconsumerstatetable.cpp  zmqconsumerstatetable.h  zmqproducerstatetable.cpp  zmqproducerstatetable.h  zmqserver.cpp  zmqserver.h
crates/sonicdb/: Cargo.toml
crates/sonicdb-derive/: Cargo.toml
crates/sonicdb-derive/src/: lib.rs
crates/sonicdb-derive/tests/: basic.rs
crates/sonicdb/src/: lib.rs
crates/swss-common/: Cargo.toml  build.rs
crates/swss-common-testing/: Cargo.toml
crates/swss-common-testing/src/: lib.rs
crates/swss-common/src/: lib.rs  types.rs
crates/swss-common/src/types/: async_util.rs  configdbconnector.rs  consumerstatetable.rs  cxxstring.rs  dbconnector.rs  events.rs  exception.rs  logger.rs  producerstatetable.rs  sonicv2connector.rs  subscriberstatetable.rs  table.rs  zmqclient.rs  zmqconsumerstatetable.rs  zmqproducerstatetable.rs  zmqserver.rs
crates/swss-common/tests/: async.rs  logger.rs  logger_fallback.rs  sync.rs  test_config_db_connector.rs  test_sonicv2_connector.rs  test_sonicv2connector.rs
debian/: changelog  conffiles  control  libswsscommon-dev.install  libswsscommon-dev.links  libswsscommon.install  libswssnlcommon.install  postinst  python-swsscommon.install  python3-swsscommon.install  rules  (+1 more)
fpmsyncd/: Makefile.am  fpmlink.cpp  fpmlink.h  fpmsyncd.cpp  routesync.cpp  routesync.h
goext/: BUILD.bazel  Makefile  Makefile.in  go.mod  swsscommon.go  swsscommon.i  swsscommon_test.go  swsscommon_wrap.cxx  swsscommon_wrap.h
intfsyncd/: Makefile.am  intfsync.cpp  intfsync.h  intfsyncd.cpp
neighsyncd/: Makefile.am  neighsync.cpp  neighsync.h  neighsyncd.cpp
orchagent/: Makefile.am  intfsorch.cpp  intfsorch.h  main.cpp  neighorch.cpp  neighorch.h  orch.cpp  orch.h  orchdaemon.cpp  orchdaemon.h  port.h  portsorch.cpp  portsorch.h  routeorch.cpp  routeorch.h  routeresync.cpp
portsyncd/: Makefile.am  linksync.cpp  linksync.h  portsyncd.cpp
pyext/: BUILD.bazel  Makefile.am  port_util.py  py_native_library.bzl  signal.i  swsscommon.i
pyext/py2/: Makefile.am
pyext/py3/: Makefile.am
sonic-db-cli/: BUILD.bazel  Makefile.am  configure.ac  main.cpp  sonic-db-cli  sonic-db-cli.cpp  sonic-db-cli.h
sonic-db-cli/debian/: changelog  control  copyright
sonic-db-cli/tests/: Makefile.am  main.cpp
test_zmq_memory/: Makefile.am  json.hpp  main.cpp  route.pb.cc  route.pb.h  route.proto
tests/: BUILD  Makefile.am  advanced_restart_ut.cpp  binary_serializer_ut.cpp  boolean_ut.cpp  c_api_ut.cpp  cfgorch_ut.cpp  cli_help_output.txt  cli_ut.cpp  component_stats_otlp_ut.cpp  componentstats_ut.cpp  config_ut.cpp  conftest.py  converter_ut.cpp  countertable_ut.cpp  decorator_ut.cpp  defaultvalueprovider_ut.cpp  events_common_ut.cpp  events_service_ut.cpp  events_ut.cpp  exec_ut.cpp  fdb_flush.cpp  go_helper_ut.cpp  ipaddress_ut.cpp  ipprefix_ut.cpp  json_ut.cpp  logger_ut.cpp  logger_ut.h  loglevel_ut.cpp  macaddress_ut.cpp  main.cpp  netdispatcher_ut.cpp  notification_queue_ut.cpp  ntf_ut.cpp  performancetimer_ut.cpp  profile_ut.cpp  profileprovider_ut.cpp  python_test_runner.py  redis_command_ut.cpp  redis_multi_db_ut.cpp  (+39 more)
tests/cli_test_data/: cli_help_output.txt  cli_ping_output.txt
tests/fakes/: fake_consumer_notifier.cc  fake_consumer_notifier.h  fake_db_connector.cpp  fake_db_connector.h  fake_producer_state_table.cc  fake_producer_state_table.h  fake_sonic_db_table.cpp  fake_sonic_db_table.h  fake_sonic_db_table_test.cpp
tests/mocks/: mock_consumer_notifier.h  mock_db_connector.h  mock_producer_state_table.h
tests/redis_multi_db_ut_config/: database_config.json  database_config0.json  database_config1.json  database_config3.json  database_config4.json  database_config5.json  database_config6.json  database_global.json  database_global_with_invalid_include.json
tests/yang/: sonic-interface.yang  sonic-nat.yang  sonic-test.yang  sonic-vlan.yang
tests/yang-missing-ref/: sonic-interface.yang
tests/zmqconfig/: zmp_port_mapping.json
(+35 files in other folders)
