[workspace]
resolver = '2'
members = [
    "crates/swss-common",
    "crates/swss-common-testing",
]
exclude = []

[workspace.package]
version = "0.1.0"
authors = ["SONiC"]
license = "Apache-2.0"
repository = "https://github.com/sonic/sonic-swss-common"
documentation = "https://github.com/sonic-net/sonic-swss-common/blob/master/README.md"
keywords = ["sonic", "swss-common"]
edition = "2021"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'

[workspace.dependencies]
# Async framework
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

# Log and error handling
tracing = { version = "0.1", features = ["log"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
syslog-tracing = "0.3"
thiserror = "1"
anyhow = "1"
human-panic = "2"
better-panic = "0.3"
signal-hook = "0.3"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
serde_with = "3.12"

getset = "0.1"
lazy_static = "1.4"
serial_test = "3.0"

# Internal dependencies
swss-common = { version = "0.1.0", path = "crates/swss-common" }
swss-common-testing = { version = "0.1.0", path = "crates/swss-common-testing" }
