# Keep bazel_compatibility in sync with sonic-buildimage's .bazelversion.
module(
    name = "sonic-swss-common",
    version = "0.0.0",
    bazel_compatibility = [">=8.5.1", "<=8.5.1"],
)

bazel_dep(name = "googletest", version = "1.11.0", repo_name = "com_google_googletest")
bazel_dep(name = "glog", version = "0.5.0", repo_name = "com_github_google_glog")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_go", version = "0.60.0.sonic-patched", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.1.0")

bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "rules_distroless", version = "0.0.0.commit-ebfd74a2e07b83235e064bb63ace98a1a5223e02")

bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
bazel_dep(name = "libnl3", version = "3.7.0")

register_toolchains("@sonic_build_infra//toolchains/gcc:all")

# The actual dependencies are listed in sonic-build-infra, and re-exported.
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
use_repo(apt, "bookworm")
