load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# Toggle for YANG-driven generation of cfg_schema.h, mirroring configure.ac's
# --enable/--disable-yangmodules. Defaults on, matching the production deb build
# (rules/swss-common.mk builds libswsscommon without the noyangmod profile).
bool_flag(
    name = "yang_modules",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "yang_modules_enabled",
    flag_values = {":yang_modules": "True"},
)

config_setting(
    name = "yang_modules_disabled",
    flag_values = {":yang_modules": "False"},
)
