load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@sonic_build_infra//swig:defs.bzl", "swig_gen_go", "swig_lib_deb")

# Extract SWIG library files from apt package for hermetic builds
swig_lib_deb(
    name = "swig_lib",
    data = "@bookworm//swig",
    strip_prefix = "usr/share/swig4.0",
)

swig_gen_go(
    name = "swsscommon_go_gen",
    interface = "swsscommon.i",
    go_out = "swsscommon.go",
    cxx_out = "swsscommon_wrap.cxx",
    hdr_out = "swsscommon_wrap.h",
    hdrs = [
        "//:hdrs",
    ],
    swig_lib = ":swig_lib",
)

# Wrapper cc_library that links the consolidated shared library and exposes
# swsscommon headers at their bare names (e.g. "dbconnector.h") for CGO.
cc_library(
    name = "swsscommon_cgo_wrapper",
    srcs = ["//:libswsscommon_consolidated.so"],
    hdrs = ["//:all_hdrs"],
    # Strip the "common/" path prefix so CGO can #include "dbconnector.h" etc.
    strip_include_prefix = "/common",
    deps = [
        "@libnl3//:libnl_3",
        "@libnl3//:libnl_route_3",
        "@libnl3//:libnl_nf_3",
        "@bookworm//libhiredis-dev:libhiredis",
        "@bookworm//libzmq3-dev:libzmq3",
        "@bookworm//uuid-dev:uuid",
        "@bookworm//libboost-dev:libboost",
        "@bookworm//libboost-serialization-dev:libboost-serialization",
    ],
    linkopts = [
        # Allow undefined symbols resolved at runtime from the consolidated .so
        "-Wl,--allow-shlib-undefined",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "swsscommon",
    srcs = [
        "swsscommon.go",          # Generated by swig_gen_go
        "swsscommon_wrap.cxx",    # Generated by swig_gen_go  #keep
        "swsscommon_wrap.h",      # Generated by swig_gen_go
    ] + ["//:all_hdrs"],
    cdeps = [":swsscommon_cgo_wrapper"],
    cgo = True,
    clinkopts = ["-fuse-ld=bfd"],
    importpath = "github.com/sonic-net/sonic-swss-common/goext",
    visibility = ["//visibility:public"],
)

go_test(
    name = "swsscommon_test",
    srcs = ["swsscommon_test.go"],
    embed = [":swsscommon"],
)
